--- a/Client/Screens/poker/styles.css
+++ b/Client/Screens/poker/styles.css
@@ -134,45 +134,49 @@ body {
     pointer-events: none;
   }
   
-  .table .user {
-    position: absolute;
-    transition: all 0.3s ease;
-  }
-  
   .user.me {
+    position: absolute;
     left: 50%;
-    bottom: -20px;
-    transform: translateY(100%) translateX(-50%);
-  }
-  
-  .table .other-users .user:nth-of-type(1) {
-    left: 20%;
-    bottom: 0;
-    transform: translateY(50%);
-  }
-  
-  .table .other-users .user:nth-of-type(2) {
-    left: 15%;
-    top: 30%;
+    bottom: -35px;
     transform: translateX(-50%);
   }
   
+  /* Left bottom position */
+  .table .other-users .user:nth-of-type(1) {
+    position: absolute;
+    left: 15%;
+    bottom: 20%;
+  }
+  
+  /* Left position */
+  .table .other-users .user:nth-of-type(2) {
+    position: absolute;
+    left: 15%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  
+  /* Top position */
   .table .other-users .user:nth-of-type(3) {
+    position: absolute;
     left: 50%;
-    top: -20px;
-    transform: translateY(-100%) translateX(-50%);
+    top: -35px;
+    transform: translateX(-50%);
   }
   
+  /* Right position */
   .table .other-users .user:nth-of-type(4) {
+    position: absolute;
     right: 15%;
-    top: 30%;
-    transform: translateX(50%);
+    top: 50%;
+    transform: translateY(-50%);
   }
   
+  /* Right bottom position */
   .table .other-users .user:nth-of-type(5) {
-    right: 20%;
-    bottom: 0;
-    transform: translateY(50%);
+    position: absolute;
+    right: 15%;
+    bottom: 20%;
   }
   
   .table .user .balance {
