--- a/Client/Screens/poker/styles.css
+++ b/Client/Screens/poker/styles.css
@@ -134,50 +134,57 @@ body {
     pointer-events: none;
   }
   
-  .user.me {
-    position: absolute;
-    left: 50%;
-    bottom: -35px;
-    transform: translateX(-50%);
-  }
+    /* Current player (bottom position) */
+    .user.me {
+      position: absolute;
+      left: 50%;
+      bottom: -100px;
+      /* Move further below the table */
+      transform: translateX(-50%);
+    }
   
-  /* Left bottom position */
-  .table .other-users .user:nth-of-type(1) {
-    position: absolute;
-    left: 15%;
-    bottom: 20%;
-  }
+    /* Bottom left position */
+    .table .other-users .user:nth-of-type(1) {
+      position: absolute;
+      left: 10%;
+      bottom: -50px;
+      /* Below the table */
+    }
   
-  /* Left position */
-  .table .other-users .user:nth-of-type(2) {
-    position: absolute;
-    left: 15%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+    /* Left position */
+    .table .other-users .user:nth-of-type(2) {
+      position: absolute;
+      left: -120px;
+      /* Outside the left edge of the table */
+      top: 50%;
+      transform: translateY(-50%);
+    }
   
-  /* Top position */
-  .table .other-users .user:nth-of-type(3) {
-    position: absolute;
-    left: 50%;
-    top: -35px;
-    transform: translateX(-50%);
-  }
+    /* Top position */
+    .table .other-users .user:nth-of-type(3) {
+      position: absolute;
+      left: 50%;
+      top: -100px;
+      /* Above the table */
+      transform: translateX(-50%);
+    }
   
-  /* Right position */
-  .table .other-users .user:nth-of-type(4) {
-    position: absolute;
-    right: 15%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+    /* Right position */
+    .table .other-users .user:nth-of-type(4) {
+      position: absolute;
+      right: -120px;
+      /* Outside the right edge of the table */
+      top: 50%;
+      transform: translateY(-50%);
+    }
   
-  /* Right bottom position */
-  .table .other-users .user:nth-of-type(5) {
-    position: absolute;
-    right: 15%;
-    bottom: 20%;
-  }
+    /* Bottom right position */
+    .table .other-users .user:nth-of-type(5) {
+      position: absolute;
+      right: 10%;
+      bottom: -50px;
+      /* Below the table */
+    }
   
   .table .user .balance {
     opacity: 0.8;
