--- a/Client/Screens/poker/styles.css
+++ b/Client/Screens/poker/styles.css
@@ -138,52 +138,59 @@ body {
     .user.me {
       position: absolute;
       left: 50%;
-      bottom: -100px;
-      /* Move further below the table */
+      bottom: -80px; /* Position at bottom arrow */
       transform: translateX(-50%);
     }
-  
+    
     /* Bottom left position */
     .table .other-users .user:nth-of-type(1) {
       position: absolute;
-      left: 10%;
-      bottom: -50px;
-      /* Below the table */
+      left: 15%;
+      bottom: -60px; /* Position at bottom left arrow */
     }
-  
+    
     /* Left position */
     .table .other-users .user:nth-of-type(2) {
       position: absolute;
-      left: -120px;
-      /* Outside the left edge of the table */
+      left: -100px; /* Position at left arrow */
       top: 50%;
       transform: translateY(-50%);
     }
-  
+    
     /* Top position */
     .table .other-users .user:nth-of-type(3) {
       position: absolute;
       left: 50%;
-      top: -100px;
-      /* Above the table */
+      top: -80px; /* Position at top arrow */
       transform: translateX(-50%);
     }
-  
+    
     /* Right position */
     .table .other-users .user:nth-of-type(4) {
       position: absolute;
-      right: -120px;
-      /* Outside the right edge of the table */
+      right: -100px; /* Position at right arrow */
       top: 50%;
       transform: translateY(-50%);
     }
-  
+    
     /* Bottom right position */
     .table .other-users .user:nth-of-type(5) {
       position: absolute;
-      right: 10%;
-      bottom: -50px;
-      /* Below the table */
+      right: 15%;
+      bottom: -60px; /* Position at bottom right arrow */
+    }
+    
+    /* Ensure card layout doesn't overlap with player info */
+    .table .user .cards {
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: center;
+    }
+    
+    .table .user .card {
+      width: 60px; /* Make cards slightly smaller */
+      height: 84px;
+      margin: 0 -10px; /* Overlap the cards a bit */
     }
   
   .table .user .balance {
